[tool.poetry]
name = "pydantic-wip"
version = "0.1.0"
description = ""
authors = ["Tom Thorogood <tom@tomthorogood.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pydantic = {extras = ["email"], version = "^1.8.1"}
inflection = "^0.5.1"
PyYAML = "^5.4.1"
sqlalchemy = "^1.4.0"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
